# SMA_star

./: Element.opam  LICENSE  README.md  SMA_star.opam  SMA_star_puzzle.opam  SMA_star_utils.opam  TestQ.opam  Utils.opam  dune-project  sliding_puzzle.opam
Element/: Element.ml  dune
SMA_star/: DEPQ.ml  DEPQ.mli  SMA_star.ml  SMA_star.mli  dune  element.ml  pseudocode.txt  utils.ml
TestQ/: TestQ.ml  TestQ.mli  ascii_art.txt  dune  test.opam
TestQ/test/: TestQ_test.ml  dune
Utils/: dune  utils.ml
doc/: README2.md  USERS-GUIDE.md  pseudocode.txt  queue-ascii-art.txt  queue-user-guide.txt  user-guide.md
puzzle/: dune  puzzle.ml
sliding_puzzle/: dune  sliding_puzzle.ml
src/: DEPQ.ml  DEPQ.mli  SMA_star.ml  SMA_star.mli  dune  element.ml  generator.ml  utils.ml
src/_test/: testq_test.ml
src/puzzle/: dune
src/test/: dune  testq_test.ml
utils/: dune  utils.ml
